refine membership type filter layout
